creation arc de cercle
création rutine arc de cercle selon methode event paint du form

--- a/Minuteur/Minuteur.vbproj
+++ b/Minuteur/Minuteur.vbproj
@@ -71,6 +71,7 @@
     <Compile Include="Minuteur.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -88,6 +89,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Minuteur.resx">
+      <DependentUpon>Minuteur.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
